--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Banana Speak</title>
+  <style>
+    textarea{
+      width: 80%;
+      height: 6vh;
+      display: block;
+      margin: 1rem;
+      padding: 1rem;
+    }
+  </style>
 </head>
 <body>
   <h1>talk banana</h1>
+  <textarea id="text-input" placeholder="put your message in english here and we will translate it into banana"></textarea>
   <button id="btn-translate">Translate</button>
 
   <script src="app.js" type="text/javascript"></script>
