--- a/index.html
+++ b/index.html
@@ -12,12 +12,23 @@
       margin: 1rem;
       padding: 1rem;
     }
+
+    #output{
+      border: 1px solid black;
+      height: 6vh;
+      width: 80%;
+      margin: 1rem;
+      padding: 1rem;
+    }
   </style>
 </head>
 <body>
   <h1>talk banana</h1>
   <textarea id="text-input" placeholder="put your message in english here and we will translate it into banana"></textarea>
   <button id="btn-translate">Translate</button>
+
+  <div style="font-size: larger;">Output will come here 👇</div>
+  <div id="output"></div>
 
   <script src="app.js" type="text/javascript"></script>
 </body>
